# SMP

./: README  readme-252.txt
smp/: BuildAll.dsp  BuildAll.vcproj  INSTALL  LICENSE  Makefile.in  SMPFullBuild.sh  aclocal.m4  config.h.in  configure  configure.in  cryptlib_mod.dsp  cryptlib_mod.vcproj  cryptlib_mod51.vcproj  readme.txt  smp.dsw  smp.sln
smp/ACL/: ACL.dsp  ACL.dsw  ACL.sln  ACL.vcproj  Makefile.in
smp/ACL/inc/: acl_api.h  aclerror.h  aclinternal.h  aclintexcept.h
smp/ACL/makes/: AclRules  AclToolRules  Makehead.Linux  Makehead.SunOS  Makehead.solaris  Makehead.solold  Makehead.template  Maketail  Maketail.ignore  TestsrcRules  genmake.sh  makelib.head
smp/ACL/src/: Makefile.in  aclac.cpp  aclapi.rc  aclasn.asn1  aclasnbits.cpp  aclcacheable.cpp  aclclearance.cpp  aclclearcert.cpp  aclconfigfile.cpp  aclerror.cpp  acllabel.cpp  aclldap.cpp  aclmatchinfo.cpp  aclpch.cpp  aclprint.cpp  aclsectag.cpp  aclsession.cpp  aclspif.cpp  aclstring.cpp  acltranslabel.cpp  resource.h
smp/SMIME/: Makefile.in  Makelibcert  Makelibcert.in  ReadMeCtil.txt  auto_hi.dsp  auto_hi.vcproj  libsm.dsp  libsm.vcproj  libsmutil.dsp  libsmutil.vcproj  readme.gen  readme.rel  readme.smp  readme.thread  readmeTest.txt  smimeMake.sh
smp/SMIME/CertMgrMsgs/: CertMgrMsgs.dsp  EnrollmentMessageSyntax.asn1
smp/SMIME/LibCtilMgrSTATIC/: LibCtilMgrSTATIC.dsp
smp/SMIME/SMP_SFL_Dist/: SMP_SFL_Dist.sh  SMP_SFL_testDist.sh
smp/SMIME/alg_libs/: Make_w32algasn  Makefile.in  Makelib_algs.in
smp/SMIME/alg_libs/lolevel/: sm_CryptoKeys.h  sm_CryptoKeysBase.cpp
smp/SMIME/alg_libs/sm_capiDLL/: BuildContainers.h  ReadMe.txt  ReadmeDevel.txt  Sm_capi.h  StdAfx.cpp  StdAfx.h  WincryptRWC.h  sm_capi.cpp  sm_capiDLL.cpp  sm_capiDLL.dsp  sm_capiDLL.h  sm_capiDLL.vcproj  sm_capiInternal.cpp
smp/SMIME/alg_libs/sm_fort/: Make_w32algasnfort  Makefile.in  ReadMe.txt  StdAfx.cpp  StdAfx.h  genasnfort.bat  sm_fort.cpp  sm_fort.h  sm_fortAsn.asn1  sm_fortCI.cpp  sm_fortDsaParams.cpp  sm_fortDsaSigvalue.cpp  sm_fortezzaDLL.cpp  sm_fortezzaDLL.dsp  sm_fortezzaDLL.h  sm_fortezzaDLL.vcproj
smp/SMIME/alg_libs/sm_fortezzaSTATIC/: sm_fortezzaSTATIC.dsp
smp/SMIME/alg_libs/sm_free3/: Makefile.in  StdAfx.cpp  StdAfx.h  genasnfree3.bat  readme.txt  sm_CryptoKeysDH.cpp  sm_CryptoKeysDH.h  sm_CryptoKeysDHExport.h  sm_CryptoKeysDsa.cpp  sm_CryptoKeysDsa.h  sm_CryptoKeysDsaExport.h  sm_CryptoKeysECDsa.cpp  sm_CryptoKeysECDsa.h  sm_CryptoKeysECDsaExport.h  sm_CryptoKeysF3Rsa.cpp  sm_CryptoKeysF3Rsa.h  sm_CryptoKeysF3RsaExport.h  sm_CryptoKeysFree3Base.cpp  sm_aes_wrap.cpp  sm_aes_wrap.h  sm_free3.cpp  sm_free3.h  sm_free3DLL.cpp  sm_free3DLL.dsp  sm_free3DLL.h  sm_free3DLL.vcproj  sm_free3Internal.cpp  sm_free3_RSA.cpp  sm_free3_asn.asn1  sm_vda_cbc.cpp  sm_vda_cbc.h  sm_vda_cbc_3_2.cpp  sm_vda_cbc_3_2.h
smp/SMIME/alg_libs/sm_pkcs11/: Makefile.in  Readme.txt  pkcs11.h  pkcs11f.h  pkcs11t.h  sm_pkcs11.cpp  sm_pkcs11.h  sm_pkcs11DLL.cpp  sm_pkcs11DLL.dsp  sm_pkcs11DLL.h  sm_pkcs11DLL.vcproj  sm_pkcs11DSASig.cpp  sm_pkcs11DSASig.h  sm_pkcs11FunctionWrappers.cpp  sm_pkcs11Functions.cpp  sm_pkcs11Functions.h  sm_pkcs11Mechanism.cpp  sm_pkcs11Oids.cpp  sm_pkcs11Oids.h  sm_pkcs11SMTI.cpp  sm_pkcs11Slot.cpp  sm_pkcs11Supplement.cpp
smp/SMIME/alg_libs/sm_pkcs11Free3/: sm_pkcs11Free3.cpp  sm_pkcs11Free3.h  sm_pkcs11Template.cpp
smp/SMIME/alg_libs/sm_pkcs11Free3DLL/: StdAfx.cpp  StdAfx.h  sm_pkcs11Free3DLL.cpp  sm_pkcs11Free3DLL.dsp  sm_pkcs11Free3DLL.h  sm_pkcs11Free3DLL.vcproj
smp/SMIME/alg_libs/sm_rsa/: Makefile.in  StdAfx.cpp  StdAfx.h  genasnrsa.bat  readme.txt  sm_CryptoKeysRsa.cpp  sm_CryptoKeysRsa.h  sm_CryptoKeysRsaExport.h  sm_rsa.cpp  sm_rsa.h  sm_rsaDLL.cpp  sm_rsaDLL.dsp  sm_rsaDLL.h  sm_rsaDLL.vcproj  sm_rsa_asn.asn1
smp/SMIME/alg_libs/sm_spex/: Makefile.in  StdAfx.cpp  aaaStdAfx.h  readme.txt  sm_spex.cpp  sm_spex.h  sm_spexCI.cpp  sm_spexDLL.cpp  sm_spexDLL.dsp  sm_spexDLL.h  sm_spexDLL.vcproj
smp/SMIME/autoAlg/: autoAlg.dsp  autoAlg.plg
smp/SMIME/autoAlg/TestlibCert/: TestlibCert.dsp  TestlibCert.plg
smp/SMIME/inc/: gzstream.h  sm_AC_Interface.h  sm_AppLogin.h  sm_CM_Interface.h  sm_VDAStream.h  sm_api.h  sm_apiCert.h  sm_apic.h  sm_apicCert.h  sm_timeStamp.h
smp/SMIME/lib/: readme.txt
smp/SMIME/libCtilMgr/: Makefile.in  Makelibctil.in  ReadMe.txt  StdAfx.cpp  StdAfx.h  libCtilMgr.cpp  libCtilMgr.dsp  libCtilMgr.vcproj
smp/SMIME/libCtilMgr/inc/: fortezzaVDA.h  sha256.h  sm_DLLInterface.h  sm_apiCtilMgr.h  sm_apicCtilMgr.h  sm_asn-list.h  sm_buffer.h  sm_common.h  sm_tlistC.h  sm_vdasnaccMgr.h
smp/SMIME/libCtilMgr/src/: Makefile.in  (+12 more)
smp/SMIME/libcert/: Makefile.in  Makelibcert.in  genasnCert.bat
smp/SMIME/libsrc/: Makefile.in  Makelib_sm.in
smp/SMP_Check/: LABEL_ClearanceVersion.lbl  Makefile.in  RootTestNistCrl.out  SMP_Check.cpp  SMP_Check.dsp  SMP_Check.vcproj  Test1@Test1.sig  Test1@Test1X_12.pfx  TestCARSA@test.gov.cer  gdb.sh  nistCARoot@nist.gov.sig  sm_CM_AC_Support.cpp  sm_CM_AC_Support.h  sm_checkCreate.cpp  sm_checkRead.cpp  tsp1pif1.spf
smp/cml/: Makefile.in
smp/cml/cmapi/: cmapi_dll.dsp  cmapi_dll.vcproj
smp/cml/cmlasn/: cmlasn.dsp  cmlasn.vcproj  cmlasnSTATIC.dsp
smp/cml/crlsrv_dll/: crlsrv_dll.dsp  crlsrv_dll.vcproj
smp/cml/ocsp_dll/: Makefile.in  ocsp_dll.dsp  ocsp_dll.rc  ocsp_dll.vcproj  resource.h
smp/cml/ocsplib_mod/: ocsplib_mod.dsp  ocsplib_mod.vcproj
smp/cml/srl/: resource.h  srl.dsp  srl.vcproj  srlapi.rc
smp/cryptlib_smp/: cryptlib_smp.dsp  cryptlib_smp.vcproj
smp/pkcs11_cryptopp/: Makefile.in  pkcs11_cryptopp.sln  rsa_pkcs11_ftp.url
smp/pkcs11_cryptopp/inc/: cryptoki.h  p11cryptopp_internal.h  pkcs11.h  pkcs11t.h
smp/pkcs11_cryptopp/pkcs11_cryptopp_dll/: pkcs11_cryptopp_dll.dsp  pkcs11_cryptopp_dll.vcproj
smp/pkcs11_cryptopp/src/: CKSession.cpp  Makefile.in  c_digest_funcs.cpp  c_dual_use_funcs.cpp  c_encrypt_funcs.cpp  c_general_funcs.cpp  c_key_funcs.cpp  c_key_mgmt_funcs.cpp  c_object_funcs.cpp  c_rand_funcs.cpp  c_session_funcs.cpp  c_sign_funcs.cpp  c_token_funcs.cpp  c_verify_funcs.cpp  create_dsa_signer.cpp  create_rsa_objects.cpp
(+199 files in other folders)
